# news-comparison

./: .env.sample  .gitignore  CLAUDE.md  Pipfile  README.md  analyse.py  do_comparison.py  exa_client.py  examples.py  linkup_client.py  main.py  newsapi_client.py  perplexity_client.py  pyproject.toml  syracuse_client.py  tavily_client.py  test_analyse.py  utils.py
results/: 2025-05-27-analysis.md  2025-08-30-results.txt  2026-01-06-analysis.md  2026-02-01-analysis.md  2026-02-01-results.txt  2026-02-10-analysis.md  2026-03-02-analysis.md
results/2025-05-27/: README.md  results.txt
results/2025-08-30/: README.md
results/2026-01-06/: README.md  results.txt
results/2026-01-06-AI-analysis/: README.md  v1-claude.md  v2-grok.md
results/2026-01-06/AI-analysis/: README.md  v1-chatgpt.md  v2-chatgpt.md  v2-copilot.md  v2-gemini.md
results/2026-02-01/: README.md
results/2026-02-01-AI-analysis/: chatgpt.md  claude-sonnet-4.5.md  gemini.md
results/2026-02-01/AI-analysis/: chatgpt-v2.md  copilot.md  grok.md
results/2026-02-10/: README.md  companies.csv  industries.csv
results/2026-02-10-AI-analysis/: chatgpt-industries.md  claude-industries.md
results/2026-02-10/AI-analysis/: chatgpt-companies.md  claude-companies.md
results/2026-03-02/: README.md  industries.csv
results/2026-03-02-AI-analysis/: chatgpt-companies.md  claude-industries.md
results/2026-03-02/AI-analysis/: chatgpt-industries.md  claude-companies.md
results/2026-03-08/: industries.csv
results/2026-03-16/: industries.csv
results/2026-03-31/: industries.csv
(+35 files in other folders)
